--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/>
     </parent>
     <groupId>store.learnup</groupId>
-    <artifactId>store-spring-boot-app</artifactId>
+    <artifactId>store-spring-boot-aop</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>store-spring-boot-app</name>
+    <name>store-spring-boot-aop</name>
     <description>Spring Boot</description>
     <properties>
         <java.version>11</java.version>
@@ -45,6 +45,15 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.9.7</version>
         </dependency>
     </dependencies>
 
